infrastructure/kubernetes/infra-modern-core-banking-poc/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: core-banking-poc
  labels:
    app: core-banking
