infrastructure/kubernetes/infra-modern-core-banking-poc/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: core-banking-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args: ["server", "/data"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data
