infrastructure/kubernetes/infra-modern-core-banking-poc/redpanda.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redpanda
  namespace: core-banking-poc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redpanda
  template:
    metadata:
      labels:
        app: redpanda
    spec:
      containers:
        - name: redpanda
          image: vectorized/redpanda:latest
          ports:
            - containerPort: 9092
            - containerPort: 9644
          args: ["start"]
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: "500m"
              memory: 256Mi
