infrastructure/kubernetes/infra-modern-core-banking-poc/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: core-banking-poc
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: minio
  type: ClusterIP
