infrastructure/kubernetes/infra-modern-core-banking-poc/redpanda-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redpanda
  namespace: core-banking-poc
spec:
  ports:
    - port: 9092
      targetPort: 9092
    - port: 9644
      targetPort: 9644
  selector:
    app: redpanda
