infrastructure/kubernetes/infra-modern-core-banking-poc/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-edge-svc
  namespace: core-banking-poc
spec:
  selector:
    app: api-edge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: funds-core-svc
  namespace: core-banking-poc
spec:
  selector:
    app: funds-core
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
