infrastructure/kubernetes/infra-modern-core-banking-poc/networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-edge
  namespace: core-banking-poc
spec:
  podSelector:
    matchLabels:
      app: funds-core
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: api-edge
  policyTypes:
    - Ingress
